# book-club-training

./: .gitignore  README.md  pyproject.toml
book_club_training/python_concurrency_with_asyncio/chapter001/: headers.txt  step001.py  step002.py  step003.py  step004.py  step005.py  step006.py  step007.py  step008.py
book_club_training/python_concurrency_with_asyncio/chapter002/: step001.py  step005.py  step008.py  step009.py  step010.py  step011.py  step012.py  step013.py  step014.py  step015.py  step018.py  step019.py  step020.py  step021.py  step022.py
book_club_training/python_concurrency_with_asyncio/chapter003/: step001.py  step002.py  step003.py  step004.py  step005.py  step006.py  step007.py  step008.py  step009.py
book_club_training/python_concurrency_with_asyncio/chapter004/: step001.py  step002.py  step003.py  step004.py  step005.py  step006.py  step007.py  step008.py  step009.py  step010.py  step011.py  step012.py  step013.py  step014.py  step015.py  step016.py  step017.py  step018.py
book_club_training/python_concurrency_with_asyncio/chapter005/: .env.example  base.py  scripts.py  step001.py  step002.py  step003.py  step004.py  step005.py  step006.py  step007.py  step008.py  step009.py  step010.py  step011.py  step012.py  step013.py  step014.py  step015.py  step016.py  step017.py
book_club_training/python_concurrency_with_asyncio/chapter006/: experiment001.py  step001.py  step002.py  step003.py  step004.py  step005.py  step006.py  step007.py  step008.py  step009.py  step010.py  step011.py
book_club_training/tdd_with_python/superlists/lists/: tests.py  (+2 more)
(+127 files in other folders)
